# python3-playground

./: .gitattributes  .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  commit-check.toml  lefthook.yml  main.py  package.json  pyproject.toml  ruff.toml
.github/: copilot-instructions.md  dependabot.yml  git-commit-instructions.md
.github/workflows/: auto-merge-dependabot.yml  ci.yml  deploy-tag.yml  python-pipenv.yml  python-poetry.yml  python-uv.yml
.github/workflows-temp/: python-poetry.yml
binary_tool/: HexTool.py
bit_util/: BitConverterTest.py  _bitConverter.py
cli_utils/: Exec.py  PLog.py  py-cli-temp.py
cli_utils/cli_lite/: __init__.py  cli_lite.py
design_patterns/: MobiusRingFile_test.py  MobiusRing_test.py  mobius_ring_file.py
dev_tools/ci_lite/: ci_lite.py
dev_tools/ci_tools/: migration-folder-git-remote-origin-url.py
docs/: dev.md
docs/adr/: 01.management.md  02.test-kits.md
io_utils/: IOFast.py
os_info/: ps_utils.py
serialization_utils/: Py3Json.py  Py3MiniDomTestCase.py  Py3XML.py  test_test.xml
src/binary_tool/: HexTool.py
src/bit_util/: BitConverter.py
src/cli_utils/: Exec.py  Makefile  PLog.py  py-cli-temp.py
src/cli_utils/cli_lite/: __init__.py  cli_lite.py  config.json
src/design_patterns/: MobiusRing.py
src/dev_tools/ci_tools/: migration-folder-git-remote-origin-url.py
src/io_utils/: IOFast.py
src/os_info/: ps_utils.py
src/py3_playground/: show_version.py
src/serialization_utils/: Py3Json.py  Py3MiniDomTestCase.py  Py3XML.py  test.xml  test_fix.xml  test_fix_test.xml
src/sys_utils/: ExecUtil.py  SysTool.py  __init__.py
src/thread_util/: PyTimer.py  _logging.py
src/time_utils/: Py3TimeUtils.py
sys_utils/: ExecUtil.py  SysTool.py
tests/: test_main.py
tests/binary_tool/: test_HexTool.py
tests/bit_util/: test_BitConverter.py
tests/design_patterns/: test_MobiusRing.py
tests/foo_test/: test_foo.py
tests/thread_util/: test_PyTimer.py
tests/thread_util/gevent_play/: _gevent_base_test.py  _gevent_pool_test.py
thread_util/: _logging.py  _pyTimer.py  _pyTimerTests.py
thread_util/gevent_play/: _gevent_base_test.py  _gevent_pool_test.py
time_utils/: Py3TimeUtils.py
