[tool.poetry]
name = "py3_playground"
version = "0.1.0"
description = "playground of python3"
authors = ["sinlov <sinlovgmppt@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"

requests = "*"
urllib3 = ">=1.26.5"
Pygments = ">=2.7.4"
gevent = "==24.2.1"
psutil = "==5.9.8"

[tool.poetry.group.dev.dependencies]
Faker = "==24.3.0"
httpie = "*"
pytest = "==7.2.1"
pytest-cov = "==4.1.0"
# https://docs.astral.sh/ruff/
# https://github.com/astral-sh/ruff
ruff = "^0.3.4"

# https://pypi.org/project/pyproject-flake8/

[tool.poetry.scripts]
show-version = "py3_playground.show_version:show_python_version"
#test_main = "python -m unittest discover"
#tests_module_target = "python -m unittest tests"
#tests_some_file = "python -m unittest discover -s tests -p test_*.py" # -s [folder] -p [file]
#tests_file_target = "python -m unittest tests/test_main.py" # only python3
#tests_binary_tool = "python -m unittest discover -s tests/binary_tool -p test_*.py" # -s [folder] -p [file]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
