[project]
name = "py3_playground"
version = "0.1.0"
description = "playground of python3"
authors = [{name = "sinlov", email = "sinlovgmppt@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11.7"
dependencies = [
    "requests",
    "urllib3>=1.26.5",
    "Pygments>=2.7.4",
    "gevent==24.2.1",
    "psutil==5.9.8",
]

[dependency-groups]
dev = [
    "Faker==37.3.0",
    "httpie",
    "pytest==7.2.1",
    "pytest-cov==4.1.0",
    "ruff>=0.3.4",
]

[project.scripts]
show-version = "py3_playground.show_version:show_python_version"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
